test/scc/stmt/semantic-errors/012.t
void test()
{
    label:
        case 1:
            ;
}